clusters/workbench/apps/core-system/networking/corpus-lb/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: corpus-control-plane
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.51
      - ip: 192.168.1.52
      - ip: 192.168.1.53
    ports:
      - port: 6443
