clusters/workbench/apps/core-system/networking/corpus-lb/endpointslices.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: corpus-control-plane
  namespace: networking
  labels:
    kubernetes.io/service-name: corpus-control-plane
addressType: IPv4
ports:
  - name: k8s
    port: 6443
    protocol: TCP
endpoints:
  - conditions:
      # ready: true
    addresses:
      - "192.168.1.51"
  - conditions:
      # ready: true
    addresses:
      - "192.168.1.52"
  - conditions:
      # ready: true
    addresses:
      - "192.168.1.53"
