clusters/workbench/apps/core-system/networking/corpus-lb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corpus-control-plane
  namespace: networking
spec:
  type: NodePort
  selector:
    app: corpus-control-plane
  ports:
    - port: 6443
      nodePort: 32443
