clusters/workbench/apps/core-system/networking/corpus-lb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corpus
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "40g"
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "corpus"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: corpus-control-plane
                port:
                  number: 6443
